syntax = "proto3";
package CIS.InternalServices.NotificationService.v2;
option csharp_namespace = "CIS.InternalServices.NotificationService.Contracts.v2";

import "UserIdentity.proto";
import "Messages/Types.proto";
import "google/protobuf/wrappers.proto";

message SearchResultsRequest {
	cis.types.UserIdentity Identifier = 1;
    google.protobuf.Int64Value CaseId = 2;
    google.protobuf.StringValue CustomId = 3;
    google.protobuf.StringValue DocumentId = 4;
}

message SearchResultsResponse {
    repeated ResultData Results = 1;
}
